# smart-factory-twin

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/src/: database.py  influx_client.py  main.py  models.py  mqtt_consumer.py
backend/src/api/v1/: signaling.py
backend/src/models/: __init__.py  base.py  core_assets.py  factory_operations.py
backend/src/routers/: fault_injection.py
backend/src/services/: oee_calculator.py
frontend/: pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/app/amr-view/: page.tsx
frontend/src/components/: FaultPanel.tsx  OeeChart.tsx  WebRtcPlayer.tsx
frontend/src/hooks/: useWebRtc.ts
ros2_ws/: Dockerfile
ros2_ws/src/factory_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/factory_interfaces/action/: ExecuteTask.action
ros2_ws/src/factory_interfaces/msg/: RobotDynamics.msg  SafetyStatus.msg
ros2_ws/src/factory_interfaces/srv/: InjectFault.srv
ros2_ws/src/ros2_medkit/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_medkit/behavior_tree/config/: amr_task_tree.xml
ros2_ws/src/ros2_medkit/src/: bt_engine_node.cpp  diagnostics_node.cpp
ros2_ws/src/ros2_mqtt_bridge/: package.xml  setup.py
ros2_ws/src/ros2_mqtt_bridge/ros2_mqtt_bridge/: bridge_node.py
ros2_ws/src/smart_factory_sim/: CMakeLists.txt  core_affinity_manager.py  package.xml
ros2_ws/src/smart_factory_sim/include/smart_factory_sim/: nav_actions.hpp
ros2_ws/src/smart_factory_sim/launch/: factory_sim.launch.py
ros2_ws/src/smart_factory_sim/map/: factory_map.pgm  factory_map.yaml
ros2_ws/src/smart_factory_sim/smart_factory_sim/: core_affinity_manager.py  integrated_control_node.py  jax_physics_engine.py  sysid_optimization_engine.py  webrtc_streamer_node.py
ros2_ws/src/smart_factory_sim/src/: bt_mission_coordinator.cpp  ros2_opc_ua_bridge_node.cpp
ros2_ws/src/smart_factory_sim/urdf/: amr.urdf
ros2_ws/src/smart_factory_sim/worlds/: factory_zone.world
ros2_ws/src/vda5050_connector/: package.xml  setup.cfg  setup.py
ros2_ws/src/vda5050_connector/vda5050_connector/: bridge_node.py
vda5050_connector/: package.xml  setup.py
volumes/influxdb_data/: influxd.bolt
volumes/mqtt_config/: mosquitto.conf
