<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_factory_sim</name>
  <version>0.0.0</version>
  <description>Smart Scale-Down 2D Factory Gazebo Simulation Package</description>
  <maintainer email="kibeom@todo.todo">kibeom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>xmlschema_converter</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>